# local-project

./: .gitignore  Makefile.in  README.org  all.lisp  autogen.sh  build-types.lisp  command.lisp  configure  configure.ac  create-project.lisp  data-init.lisp  database.lisp  dependency-protocol.lisp  dependency.lisp  gdep.asd  gdep.ros  init-project.lisp  lpro.asd  lpro.ros  lpro.ros.in  project-management.lisp  project.lisp  settings.lisp  update-commands.lisp  util.lisp  version-control.lisp
data/: README.org
data/build-types/make/: build.sh  install.sh
data/build-types/ninja/: build.sh  install.sh
data/pkg-db/rpm/: get-installed-date.sh  is-installed.sh
data/version-control/git/: update.sh
docs/: database.org
src/: all.lisp  build-types.lisp  data-init.lisp  database.lisp  dependency.lisp  project-management.lisp  project.lisp  settings.lisp.in  update-commands.lisp  util.lisp
